# scllama

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
src/data/: prepare_files.py
src/scllama/: sc_image_analysis.ipynb  sc_image_analysis.py  utils.py
